--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      *{
+        font-family: sans-serif;
+        color: white;
+      }
       body {
         background-color: black;
       }
@@ -13,9 +17,13 @@
         margin-left: 20%;
         margin-top: 2%;
       }
+      h1{
+        text-align: center;
+      }
     </style>
   </head>
   <body>
+    <h1>Jolly ahh Irrukenga</h1>
     <img src="scary-face-white-red-paint-n0mx6alogl92paao.jpg" alt="" />
   </body>
 </html>
